# INFO0027-Boggle

./: CMakeLists.txt  MakeFile  compile.bat  compile_and_test.bat  test.bat
example_files/: grid_2x2.txt  grid_3x3.txt  grid_4x4.txt  grid_5x5.txt
src/: main.c
src/hashtable/: hash.c  hash.h  hashtable_char_int.c  hashtable_char_int.h  hashtable_char_int.h.gch  hashtable_char_node.c  hashtable_char_node.h
src/pair/: pair_int_int.c  pair_int_int.h
src/probe/: probe.c  probe.h
src/stack/: stack_pair.c  stack_pair.h  stack_probe.c  stack_probe.h
src/tree/: tree.c  tree.h
